# Demo_nav

./: .dockerignore  .env.example  .gitignore  ARCHIVOS_EXCEL.txt  CALCULADORA_ROI.md  CHECKLIST_ENTREGA.md  DEPLOY_INSTRUCTIONS.md  DOCKER_DEPLOYMENT.md  Dockerfile  GOOGLE_MAPS_SETUP.md  GUIA_ARCHIVOS_EXCEL.md  GUIA_PRESENTACION.md  LAMBDA_CONFIG_FIX.md  LAMBDA_CSV_FORMAT_UPDATE.md  LAMBDA_DEPLOY_GUIDE.md  ListadoTraslados (54) 26-11-2025.csv  ORTOOLS_OPTIMIZATION.md  PROJECT_DOCUMENTATION.md  PROPUESTA_TECNICA.md  QUICK_START.txt  README.md  README_GITHUB.md  TIME_BASED_ROUTING.md  cors-config.json  cuadro_pasajeros_van.csv  deploy_and_configure.sh  deploy_docker_lambda.sh  deploy_lambda.sh  deploy_lambda_with_layers.sh  index.html  lambda_function_updated.py  package-lock.json  package.json  requirements.txt  start.sh  test_geocoding.py  test_maipu_40_drivers.csv  vercel.json
.github/workflows/: deploy-lambda.yml
api/: get-street-route.js
backend/: app.py  app_simple.py  requirements.txt
backend-python/: .env.example  README.md  app.py  pyproject.toml  run_local.sh
data/: conductores_50.csv  conductores_completo.csv  conductores_pequeno.csv  conductores_santiago_chile.csv  ejemplo_conductores.csv
src/: App.jsx  index.css
src/components/: Dashboard.jsx  FileUpload.jsx  KPIDashboard.jsx  MapView.jsx  RouteEditor.jsx
src/config/: api.js
